--- a/build.gradle
+++ b/build.gradle
@@ -9,6 +9,8 @@ dependencies {
     testCompile 'io.cucumber:cucumber-java:' + cucumberVersion
     testCompile 'io.cucumber:cucumber-junit:' + cucumberVersion
     testCompile 'junit:junit:' + junitVersion
+    compile group: 'org.seleniumhq.selenium', name: 'selenium-java', version: '2.53.1'
+
 }
 
 repositories {
